# rutie-serde

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  macros.rs  panics.rs  ser.rs
