[package]
name = "rutie-serde"
version = "0.1.1"
authors = ["Andrii Dmytrenko <andrii.dmytrenko@deliveroo.co.uk>"]
edition = "2018"
description = "rutie serde integration"
repository = "https://github.com/deliveroo/rutie-serde"
readme = "README.md"
keywords = ["rutie", "serde", "ruru", "ruby"]
categories = ["external-ffi-bindings"]
license = "MIT"

[dependencies]
rutie = { git = "https://github.com/Antti/rutie.git", branch = "run-adjust_memory_usage-when-wrapping-unwrapping-data" }
serde = "1.0"
serde_json = "1.0"
log = "^0.4"
