[package]
name = "rutie-serde"
version = "0.3.0"
authors = ["Andrii Dmytrenko <andrii.dmytrenko@deliveroo.co.uk>"]
edition = "2018"
description = "rutie serde integration"
repository = "https://github.com/deliveroo/rutie-serde"
readme = "README.md"
keywords = ["rutie", "serde", "ruru", "ruby"]
categories = ["external-ffi-bindings"]
license = "MIT"

[dependencies]
log = "0.4.13"
rutie = "0.8.1"
serde = "1.0.119"
